# RAMP

./: .gitignore  AGENTS.md  BRIEF.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  build.rs
.claude/: settings.local.json
.github/workflows/: release.yml
src/: apache_conf.rs  config.rs  events.rs  executor.rs  health.rs  lib.rs  logger.rs  main.rs  mysql_conf.rs  paths.rs  php_conf.rs  process.rs  reducer.rs  state.rs  tray.rs  ui.rs
tests/: integration_health.rs  integration_spawn.rs  reducer_props.proptest-regressions  reducer_props.rs
