[package]
name = "ramp"
version = "1.1.0"
edition = "2021"
description = "Deterministic local dev stack manager for Windows (Apache + MySQL + PHP)"
license = "GPL-3.0-only"
repository = "https://github.com/YOUR_USERNAME/ramp"
readme = "README.md"
keywords = ["windows", "apache", "mysql", "php", "devstack"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"
ureq = "2"
eframe = "0.27"
egui = "0.27"
tray-item = "0.9"

[dependencies.windows]
version = "0.56"
features = [
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_IO",
]

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
opt-level = 3
strip = true
